# coreutils

./: CMakeLists.txt  CONTRIBUTING.md  README.md  ford.md  fpm.toml
src/: corestruc.f90  coreutils.f90
src/corestruc/: corestruc_io_utils.f90  corestruc_kinds.f90
src/coreutils/: coreutils_array.f90  coreutils_const.f90  coreutils_error.f90  coreutils_file.f90  coreutils_geom.f90  coreutils_io.f90  coreutils_kind.f90  coreutils_kinds.f90  coreutils_linalg.f90  coreutils_string.f90
test/: CMakeLists.txt  test_array.f90  test_error.f90  test_file.f90  test_geom.f90  test_linalg.f90  test_misc.f90  test_string.f90
